librbd: potential race when replaying journal ops

Fixes: http://tracker.ceph.com/issues/16198
Signed-off-by: Jason Dillaman <dillaman@redhat.com>
(cherry picked from commit 75b0f58e37b0ede5e8cf8dcaea980cf71a5ca908)